--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -7,8 +7,8 @@
     <title>LAYOUT</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
-    <div class="header">
+  <body class="flex-layout">
+    <div class="header flex-layout">
       <ul class="left-links">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
@@ -28,7 +28,7 @@
         <button>Do the other thing!</button>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer flex-layout">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
